slight refactoring :P